Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-22 02:22+0000\n"
+"POT-Creation-Date: 2021-11-19 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -77,18 +77,36 @@ msgid ""
 "  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:35
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-oidc-config-group-dev-ui-config_quarkus.oidc.devui.grant-options-grant-options]]`link:#quarkus-oidc-config-group-dev-ui-config_quarkus.oidc.devui.grant-options-grant-options[quarkus.oidc.devui.grant-options]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Grant options\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:36
+#, no-wrap
+msgid "`Map<String,Map<String,String>>`"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:33
+#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:42
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:37
+#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:46
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:41
+#: upstream/_generated-config/main/config/quarkus-oidc-config-group-dev-ui-config.adoc:50
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
