--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-11 02:19+0000\n"
+"POT-Creation-Date: 2021-11-19 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -150,7 +150,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Enables OIDC discovery. If the discovery is disabled then the 'token-path' property must be configured.\n"
+"Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.\n"
 "--"
 msgstr ""
 
@@ -222,7 +222,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC token endpoint which issues access and refresh tokens using either 'client_credentials' or 'password' grants\n"
+"Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.\n"
 "--"
 msgstr ""
 
@@ -738,7 +738,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -750,7 +750,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -762,7 +762,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -774,7 +774,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -786,7 +786,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -1373,7 +1373,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Enables OIDC discovery. If the discovery is disabled then the 'token-path' property must be configured.\n"
+"Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.\n"
 "--"
 msgstr ""
 
@@ -1385,7 +1385,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC token endpoint which issues access and refresh tokens using either 'client_credentials' or 'password' grants\n"
+"Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.\n"
 "--"
 msgstr ""
 
@@ -1794,7 +1794,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC authorization endpoint which authenticates the users. This property must be set for the 'web-app' applications if OIDC discovery is disabled. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -1806,7 +1806,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC userinfo endpoint. This property must only be set for the 'web-app' applications if OIDC discovery is disabled and 'authentication.user-info-required' property is enabled. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -1818,7 +1818,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC RFC7662 introspection endpoint which can introspect both opaque and JWT tokens. This property must be set if OIDC discovery is disabled and 1) the opaque bearer access tokens have to be verified or 2) JWT tokens have to be verified while the cached JWK verification set with no matching JWK is being refreshed. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -1830,7 +1830,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC JWKS endpoint which returns a JSON Web Key Verification Set. This property should be set if OIDC discovery is disabled and the local JWT verification is required. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
@@ -1842,7 +1842,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Relative path of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.\n"
+"Relative path or absolute URL of the OIDC end_session_endpoint. This property must be set if OIDC discovery is disabled and RP Initiated Logout support for the 'web-app' applications is required. This property will be ignored if the discovery is enabled.\n"
 "--"
 msgstr ""
 
