--- a/l10n/po/ja_JP/_guides/amazon-iam.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-iam.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:17+0000\n"
-"PO-Revision-Date: 2021-04-21 21:04+0900\n"
+"PO-Revision-Date: 2021-11-19 17:43+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/amazon-iam.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Amazon IAM Client"
+#, no-wrap
 msgid "Amazon IAM Client"
-msgstr "Quarkus - Amazon IAMクライアント"
+msgstr "Amazon IAMクライアント"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:12
