--- a/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-04-29 11:29+0900\n"
+"PO-Revision-Date: 2021-11-19 17:45+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/amazon-kms.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Amazon KMS Client"
+#, no-wrap
 msgid "Amazon KMS Client"
-msgstr "Quarkus - Amazon KMSクライアント"
+msgstr "Amazon KMSクライアント"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:13
@@ -74,10 +73,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:33
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:34
