--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-04-24 10:10+0900\n"
+"PO-Revision-Date: 2021-11-19 17:46+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/amazon-sns.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Amazon SNS Client"
+#, no-wrap
 msgid "Amazon SNS Client"
-msgstr "Quarkus - Amazon SNSクライアント"
+msgstr "Amazon SNSクライアント"
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:15
@@ -74,10 +73,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:35
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:36
@@ -156,7 +153,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:70
-#, fuzzy
 msgid "If you want to run the demo using SNS on your AWS account, you can create a topic using AWS default profile"
 msgstr "AWSアカウントでSNSを使ってデモを実行したい場合は、AWSのデフォルトプロファイルを使ってトピックを作成します。"
 
