--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-openshift-openshift-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-openshift-openshift-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-22 02:22+0000\n"
+"POT-Creation-Date: 2021-11-23 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,7 +78,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-openshift-openshift-config.adoc:26
 #, no-wrap
-msgid "`deployment`, `deployment-config`"
+msgid "`deployment`, `deployment-config`, `stateful-set`"
 msgstr ""
 
 #. type: Table
