--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-10 02:19+0000\n"
+"POT-Creation-Date: 2021-11-23 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -105,7 +105,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:39
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.url]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.url[quarkus.rest-client.\"configs\".url]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.url]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.url[quarkus.rest-client.configs.\"configs\".url]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -117,7 +117,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:48
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.uri]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.uri[quarkus.rest-client.\"configs\".uri]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.uri]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.uri[quarkus.rest-client.configs.\"configs\".uri]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -129,7 +129,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:57
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.scope]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.scope[quarkus.rest-client.\"configs\".scope]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.scope]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.scope[quarkus.rest-client.configs.\"configs\".scope]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -141,7 +141,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:66
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.providers]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.providers[quarkus.rest-client.\"configs\".providers]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.providers]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.providers[quarkus.rest-client.configs.\"configs\".providers]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -153,7 +153,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:75
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connect-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connect-timeout[quarkus.rest-client.\"configs\".connect-timeout]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connect-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connect-timeout[quarkus.rest-client.configs.\"configs\".connect-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -172,7 +172,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:84
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.read-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.read-timeout[quarkus.rest-client.\"configs\".read-timeout]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.read-timeout]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.read-timeout[quarkus.rest-client.configs.\"configs\".read-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -184,7 +184,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:93
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.follow-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.follow-redirects[quarkus.rest-client.\"configs\".follow-redirects]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.follow-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.follow-redirects[quarkus.rest-client.configs.\"configs\".follow-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -202,7 +202,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:102
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.proxy-address]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.proxy-address[quarkus.rest-client.\"configs\".proxy-address]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.proxy-address]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.proxy-address[quarkus.rest-client.configs.\"configs\".proxy-address]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -214,7 +214,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:111
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.query-param-style]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.query-param-style[quarkus.rest-client.\"configs\".query-param-style]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.query-param-style]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.query-param-style[quarkus.rest-client.configs.\"configs\".query-param-style]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -232,7 +232,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:120
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store[quarkus.rest-client.\"configs\".trust-store]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store[quarkus.rest-client.configs.\"configs\".trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -244,7 +244,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:129
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store-password[quarkus.rest-client.\"configs\".trust-store-password]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store-password[quarkus.rest-client.configs.\"configs\".trust-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -256,7 +256,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:138
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.trust-store-type[quarkus.rest-client.\"configs\".trust-store-type]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.trust-store-type[quarkus.rest-client.configs.\"configs\".trust-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -268,7 +268,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:147
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store[quarkus.rest-client.\"configs\".key-store]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store[quarkus.rest-client.configs.\"configs\".key-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -280,7 +280,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:156
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store-password[quarkus.rest-client.\"configs\".key-store-password]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store-password]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store-password[quarkus.rest-client.configs.\"configs\".key-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -292,7 +292,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:165
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.key-store-type[quarkus.rest-client.\"configs\".key-store-type]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store-type]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.key-store-type[quarkus.rest-client.configs.\"configs\".key-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -304,7 +304,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:174
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.hostname-verifier]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.hostname-verifier[quarkus.rest-client.\"configs\".hostname-verifier]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.hostname-verifier]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.hostname-verifier[quarkus.rest-client.configs.\"configs\".hostname-verifier]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -316,7 +316,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:183
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connection-ttl]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connection-ttl[quarkus.rest-client.\"configs\".connection-ttl]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connection-ttl]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connection-ttl[quarkus.rest-client.configs.\"configs\".connection-ttl]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -328,7 +328,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:192
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connection-pool-size]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.connection-pool-size[quarkus.rest-client.\"configs\".connection-pool-size]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connection-pool-size]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.connection-pool-size[quarkus.rest-client.configs.\"configs\".connection-pool-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -340,7 +340,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-general-config-items.adoc:201
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.max-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.-configs-.max-redirects[quarkus.rest-client.\"configs\".max-redirects]`\n"
+"[[quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.max-redirects]]`link:#quarkus-restclient-config-general-config-items_quarkus.rest-client.configs.-configs-.max-redirects[quarkus.rest-client.configs.\"configs\".max-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
