--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-01 02:24+0000\n"
+"POT-Creation-Date: 2021-11-23 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:16
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.url]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.url[quarkus.rest-client.\"configs\".url]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.url]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.url[quarkus.rest-client.configs.\"configs\".url]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -72,7 +72,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.uri]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.uri[quarkus.rest-client.\"configs\".uri]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.uri]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.uri[quarkus.rest-client.configs.\"configs\".uri]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -84,7 +84,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:34
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.scope]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.scope[quarkus.rest-client.\"configs\".scope]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.scope]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.scope[quarkus.rest-client.configs.\"configs\".scope]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -96,7 +96,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:43
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.providers]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.providers[quarkus.rest-client.\"configs\".providers]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.providers]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.providers[quarkus.rest-client.configs.\"configs\".providers]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -108,7 +108,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:52
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connect-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connect-timeout[quarkus.rest-client.\"configs\".connect-timeout]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connect-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connect-timeout[quarkus.rest-client.configs.\"configs\".connect-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:61
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.read-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.read-timeout[quarkus.rest-client.\"configs\".read-timeout]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.read-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.read-timeout[quarkus.rest-client.configs.\"configs\".read-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -139,7 +139,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:70
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.follow-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.follow-redirects[quarkus.rest-client.\"configs\".follow-redirects]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.follow-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.follow-redirects[quarkus.rest-client.configs.\"configs\".follow-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -157,7 +157,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:79
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.proxy-address]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.proxy-address[quarkus.rest-client.\"configs\".proxy-address]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.proxy-address]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.proxy-address[quarkus.rest-client.configs.\"configs\".proxy-address]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -169,7 +169,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:88
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.query-param-style]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.query-param-style[quarkus.rest-client.\"configs\".query-param-style]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.query-param-style]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.query-param-style[quarkus.rest-client.configs.\"configs\".query-param-style]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -187,7 +187,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:97
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store[quarkus.rest-client.\"configs\".trust-store]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store[quarkus.rest-client.configs.\"configs\".trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -199,7 +199,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:106
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store-password[quarkus.rest-client.\"configs\".trust-store-password]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store-password[quarkus.rest-client.configs.\"configs\".trust-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -211,7 +211,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:115
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.trust-store-type[quarkus.rest-client.\"configs\".trust-store-type]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.trust-store-type[quarkus.rest-client.configs.\"configs\".trust-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -223,7 +223,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:124
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store[quarkus.rest-client.\"configs\".key-store]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store[quarkus.rest-client.configs.\"configs\".key-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -235,7 +235,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:133
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store-password[quarkus.rest-client.\"configs\".key-store-password]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store-password[quarkus.rest-client.configs.\"configs\".key-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -247,7 +247,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:142
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.key-store-type[quarkus.rest-client.\"configs\".key-store-type]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.key-store-type[quarkus.rest-client.configs.\"configs\".key-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -259,7 +259,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:151
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.hostname-verifier]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.hostname-verifier[quarkus.rest-client.\"configs\".hostname-verifier]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.hostname-verifier]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.hostname-verifier[quarkus.rest-client.configs.\"configs\".hostname-verifier]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -271,7 +271,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:160
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connection-ttl]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connection-ttl[quarkus.rest-client.\"configs\".connection-ttl]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connection-ttl]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connection-ttl[quarkus.rest-client.configs.\"configs\".connection-ttl]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -291,7 +291,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:169
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connection-pool-size]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.connection-pool-size[quarkus.rest-client.\"configs\".connection-pool-size]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connection-pool-size]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.connection-pool-size[quarkus.rest-client.configs.\"configs\".connection-pool-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -303,7 +303,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:178
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.max-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-configs-.max-redirects[quarkus.rest-client.\"configs\".max-redirects]`\n"
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.max-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.configs.-configs-.max-redirects[quarkus.rest-client.configs.\"configs\".max-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
