--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-10 02:20+0000\n"
+"POT-Creation-Date: 2021-11-23 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -143,7 +143,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:57
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.url]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.url[quarkus.rest-client.\"configs\".url]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.url]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.url[quarkus.rest-client.configs.\"configs\".url]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -155,7 +155,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:66
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.uri]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.uri[quarkus.rest-client.\"configs\".uri]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.uri]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.uri[quarkus.rest-client.configs.\"configs\".uri]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -167,7 +167,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:75
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.scope]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.scope[quarkus.rest-client.\"configs\".scope]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.scope]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.scope[quarkus.rest-client.configs.\"configs\".scope]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -179,7 +179,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:84
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.providers]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.providers[quarkus.rest-client.\"configs\".providers]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.providers]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.providers[quarkus.rest-client.configs.\"configs\".providers]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -191,7 +191,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:93
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.connect-timeout]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.connect-timeout[quarkus.rest-client.\"configs\".connect-timeout]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connect-timeout]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connect-timeout[quarkus.rest-client.configs.\"configs\".connect-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -210,7 +210,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:102
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.read-timeout]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.read-timeout[quarkus.rest-client.\"configs\".read-timeout]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.read-timeout]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.read-timeout[quarkus.rest-client.configs.\"configs\".read-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -222,7 +222,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:111
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.follow-redirects]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.follow-redirects[quarkus.rest-client.\"configs\".follow-redirects]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.follow-redirects]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.follow-redirects[quarkus.rest-client.configs.\"configs\".follow-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -234,7 +234,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:120
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.proxy-address]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.proxy-address[quarkus.rest-client.\"configs\".proxy-address]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.proxy-address]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.proxy-address[quarkus.rest-client.configs.\"configs\".proxy-address]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -246,7 +246,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:129
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.query-param-style]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.query-param-style[quarkus.rest-client.\"configs\".query-param-style]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.query-param-style]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.query-param-style[quarkus.rest-client.configs.\"configs\".query-param-style]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -264,7 +264,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:138
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store[quarkus.rest-client.\"configs\".trust-store]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store[quarkus.rest-client.configs.\"configs\".trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -276,7 +276,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:147
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store-password]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store-password[quarkus.rest-client.\"configs\".trust-store-password]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store-password]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store-password[quarkus.rest-client.configs.\"configs\".trust-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -288,7 +288,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:156
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store-type]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.trust-store-type[quarkus.rest-client.\"configs\".trust-store-type]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store-type]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.trust-store-type[quarkus.rest-client.configs.\"configs\".trust-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -300,7 +300,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:165
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.key-store]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.key-store[quarkus.rest-client.\"configs\".key-store]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store[quarkus.rest-client.configs.\"configs\".key-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -312,7 +312,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:174
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.key-store-password]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.key-store-password[quarkus.rest-client.\"configs\".key-store-password]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store-password]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store-password[quarkus.rest-client.configs.\"configs\".key-store-password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -324,7 +324,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:183
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.key-store-type]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.key-store-type[quarkus.rest-client.\"configs\".key-store-type]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store-type]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.key-store-type[quarkus.rest-client.configs.\"configs\".key-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -336,7 +336,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:192
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.hostname-verifier]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.hostname-verifier[quarkus.rest-client.\"configs\".hostname-verifier]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.hostname-verifier]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.hostname-verifier[quarkus.rest-client.configs.\"configs\".hostname-verifier]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -348,7 +348,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:201
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.connection-ttl]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.connection-ttl[quarkus.rest-client.\"configs\".connection-ttl]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connection-ttl]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connection-ttl[quarkus.rest-client.configs.\"configs\".connection-ttl]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -360,7 +360,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:210
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.connection-pool-size]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.connection-pool-size[quarkus.rest-client.\"configs\".connection-pool-size]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connection-pool-size]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.connection-pool-size[quarkus.rest-client.configs.\"configs\".connection-pool-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -372,7 +372,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config.adoc:219
 #, no-wrap
 msgid ""
-"[[quarkus-restclient-config_quarkus.rest-client.-configs-.max-redirects]]`link:#quarkus-restclient-config_quarkus.rest-client.-configs-.max-redirects[quarkus.rest-client.\"configs\".max-redirects]`\n"
+"[[quarkus-restclient-config_quarkus.rest-client.configs.-configs-.max-redirects]]`link:#quarkus-restclient-config_quarkus.rest-client.configs.-configs-.max-redirects[quarkus.rest-client.configs.\"configs\".max-redirects]`\n"
 "\n"
 "[.description]\n"
 "--\n"
