Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-11-03 15:12+0000\n"
+"POT-Creation-Date: 2021-11-24 12:13+0000\n"
 "PO-Revision-Date: 2021-10-20 17:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1402,6 +1402,67 @@ msgstr "Apache Kafka Streamsの使用"
 #, fuzzy, no-wrap
 #| msgid "/guides/kafka-streams"
 msgid "/guides/amqp-dev-services"
+msgstr "/guides/kafka-streams"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide demonstrates how your Quarkus application can utilize MicroProfile Reactive Messaging to interact with AMQP."
+msgid "This guide demonstrates how your Quarkus application can utilize SmallRye Reactive Messaging to interact with RabbitMQ."
+msgstr "このガイドでは、QuarkusアプリケーションがMicroProfile Reactive Messagingを利用してAMQPと対話する方法を説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using AMQP with Reactive Messaging"
+msgid "Using RabbitMQ with Reactive Messaging"
+msgstr "リアクティブメッセージングでのAMQPの利用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/amqp"
+msgid "/guides/rabbitmq"
+msgstr "/guides/amqp"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Reference guide for SmallRye Reactive Messaging and RabbitMQ."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "CDI Reference"
+msgid "RabbitMQ Reference"
+msgstr "CDIリファレンス"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/http-reference"
+msgid "/guides/rabbitmq-reference"
+msgstr "/guides/http-reference"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Start RabbitMQ automatically in dev and test modes."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using Apache Kafka Streams"
+msgid "RabbitMQ Dev Services"
+msgstr "Apache Kafka Streamsの使用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/kafka-streams"
+msgid "/guides/rabbitmq-dev-services"
 msgstr "/guides/kafka-streams"
 
 #. type: Hash Value - Key: description
