Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-native-pkg-native-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-native-pkg-native-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-12 02:18+0000\n"
+"POT-Creation-Date: 2021-11-25 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,6 +56,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:209
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:281
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:294
+#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:330
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -133,7 +134,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:257
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:266
 #: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:306
-#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:314
+#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:315
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -557,5 +558,35 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Generate the report files for GraalVM Dashboard.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:320
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.compression.level]]`link:#quarkus-native-pkg-native-config_quarkus.native.compression.level[quarkus.native.compression.level]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The compression level in ++[++1, 10++]++. 10 means *best* Higher compression level requires more time to compress the executable.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:321
+#, no-wrap
+msgid "int"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-native-pkg-native-config.adoc:329
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-native-pkg-native-config_quarkus.native.compression.additional-args]]`link:#quarkus-native-pkg-native-config_quarkus.native.compression.additional-args[quarkus.native.compression.additional-args]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].\n"
 "--"
 msgstr ""
