--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-12 02:23+0000\n"
+"POT-Creation-Date: 2021-11-25 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1115,7 +1115,7 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/writing-extensions.adoc:570
-msgid "This plugin is still experimental, it does not validate the extension dependencies as the equivalent Maven plugin does. Unit tests are not supported by the plugin for the moment."
+msgid "This plugin is still experimental, it does not validate the extension dependencies as the equivalent Maven plugin does."
 msgstr ""
 
 #. type: Title ===
