--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-19 02:21+0000\n"
+"POT-Creation-Date: 2021-11-25 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:6
 #, fuzzy, no-wrap
 #| msgid "Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow."
-msgid "Using OpenID Connect (OIDC) to Protect Web Applications using Authorization Code Flow."
+msgid "Using OpenID Connect (OIDC) to Protect Web Applications using Authorization Code Flow"
 msgstr "Quarkus - 認可コードフローのOpenID Connectを使用してWebアプリケーションを保護"
 
 #. type: Plain text
