Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-25 02:22+0000\n"
+"POT-Creation-Date: 2021-11-26 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -278,14 +278,14 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The header to use for UI Screen (Swagger UI, GraphQL UI etc)\n"
+"The header to use for UI Screen (Swagger UI, GraphQL UI etc).\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core.adoc:108
 #, no-wrap
-msgid "`{applicationName} {applicationVersion} (powered by Quarkus {quarkusVersion})`"
+msgid "`{applicationName} (powered by Quarkus)`"
 msgstr ""
 
 #. type: Table
