--- a/l10n/po/ja_JP/_versions/main/guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-ui.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-11-26 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -492,7 +492,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "import io.quarkus.arc.Arc;\n"
-"import io.quarkus.cache.runtime.caffeine.CaffeineCache;\n"
+"import io.quarkus.cache.CaffeineCache;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -676,8 +676,8 @@ msgstr ""
 #: upstream/_versions/main/guides/dev-ui.adoc:366
 #, no-wrap
 msgid ""
+"import io.quarkus.cache.CaffeineCache;\n"
 "import io.quarkus.cache.runtime.CaffeineCacheSupplier;\n"
-"import io.quarkus.cache.runtime.caffeine.CaffeineCache;\n"
 "import io.quarkus.runtime.annotations.Recorder;\n"
 "import io.quarkus.devconsole.runtime.spi.DevConsolePostHandler;\n"
 "import io.quarkus.vertx.http.runtime.devmode.devconsole.FlashScopeUtil.FlashMessageStatus;\n"
