--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-application-application-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-application-application-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-12 02:19+0000\n"
+"POT-Creation-Date: 2021-11-26 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -79,12 +79,12 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The header to use for UI Screen (Swagger UI, GraphQL UI etc)\n"
+"The header to use for UI Screen (Swagger UI, GraphQL UI etc).\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-application-application-config.adoc:37
 #, no-wrap
-msgid "`{applicationName} {applicationVersion} (powered by Quarkus {quarkusVersion})`"
+msgid "`{applicationName} (powered by Quarkus)`"
 msgstr ""
